--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-18  MenTaLguY <mental@rydia.net>
+
+	* src/dialogs/filedialog.cpp: unref the preview document we created
+
 2004-09-18  Carl Hetherington <inkscape@carlh.net>
 
 	* src/livarot/AVL.cpp, src/livarot/AVL.h,
