--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-21  MenTaLguY <mental@rydia.net>
+
+	* src/gc-finalized.h: fix for stupid bug preventing these objects
+	  from being collected
+
 2004-09-21  Peter Moulder  <pmoulder@river>
 
 	* src/sp-marker.h, src/sp-marker.cpp (sp_marker_show_instance):
