--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-09-23  MenTaLguY <mental@rydia.net>
 
+	* src/message-context.h, src/message-context.cpp: 
+
+	  added flash methods to Inkscape::MessageContext
+
 	* src/gc-core.h, src/display/nr-arena-glyphs.cpp, src/display/nr-arena-group.cpp,
 	  src/display/nr-arena-item.cpp, src/display/nr-arena-item.h,
 	  src/display/nr-arena-shape.cpp, src/libnr/nr-object.cpp, src/libnr/nr-object.h,
