--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-09-23  MenTaLguY <mental@rydia.net>
 
+	* src/interface.cpp, src/layer-fns.cpp, src/layer-fns.h, src/verbs.cpp:
+
+	  initial stab at layers menu; not everything works the way it should
+	  quite yet
+
 	* src/message-context.h, src/message-context.cpp: 
 
 	  added flash methods to Inkscape::MessageContext
