(sp_pen_context_root_handler): Split into many routines.  Fix some illegal union member aliasing.
(bzr r4362)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2004-10-10  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
 	* src/draw-context.cpp (sp_pen_context_root_handler):
+	  Split into many routines.  Fix some illegal union member aliasing.
 	  Minor code cleanups in backspace handling.
 
 	* src/draw-context.cpp (spdc_endpoint_snap_handle):
